<resources>
    <string name="app_name">My Services</string>


    <string name="sign_up">Sign Up —></string>
    <string name="login_return">Login —></string>
    <string name="password_recover">Lost your password ?</string>
    <string name="login_text">LOGIN</string>
    <string name="create_account">CREATE</string>
    <string name="fist_name_hint">First Name:</string>
    <string name="second_name_hint">Second Name:</string>
    <string name="email_hint">Email:</string>
    <string name="password_hint">Password:</string>
    <string name="phone_number">Phone:</string>
    <string name="re_password_hint">Re Password:</string>
    <string name="business_name">Business Name:</string>
    <string name="business_web">Business Web Site:</string>
    <string name="about_yout_business">About Your Business:</string>
    <string name="send_code">SEND CODE</string>
    <string name="validate_code">VALIDATE CODE</string>
    <string name="code">CODE:</string>
    <string name="change_password">GO!</string>
    <string name="nex_step">Next —></string>
    <string name="dev_nick">Dev. NativeCode - Release V. 1.0 2022</string>
    <string name="principal">Principal</string>
    <string name="home">home</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="title_register_service">TITLE</string>
    <string name="specifications_service">SPECIFICATIONS</string>
    <string name="price">PRICE</string>
    <string name="search">Search</string>
    <string name="new_service">New Service</string>
    <string name="update_service">Update Service</string>
    <string name="update">Update</string>


    <string name="carpentry">Carpentry</string>
    <string name="plumbing">Plumbing</string>
    <string name="electricity">Electricity</string>
    <string name="electronics">Electronics</string>
    <string name="bodywork">Bodywork</string>
    <string name="building">Building</string>
    <string name="mechanics">Mechanics</string>
    <string name="technology">Technology</string>
    <string name="health">Health</string>
    <string name="fashion">Fashion</string>
    <string name="art">Art</string>
    <string name="others">Others</string>
    <string name="my_services">My Services</string>
    <string name="services">SERVICES</string>


    <string-array name="rol_user">
        <item>Client</item>
        <item>Seller</item>
    </string-array>

    <string-array name="countrys">
        <item>New Zealand</item>
        <item>North Island</item>
        <item>Northland</item>
        <item>Auckland</item>
        <item>Waikato</item>
        <item>Bay of Plenty</item>
        <item>Gisborne</item>
        <item>Hawke`s Bay</item>
        <item>Taranaki</item>
        <item>Whanganui</item>
        <item>Manawatu</item>
        <item>Wairarapa</item>
        <item>Wellington</item>
        <item>South Island</item>
        <item>Nelson Bays</item>
        <item>Marlborough</item>
        <item>West Coast</item>
        <item>Canterbury</item>
        <item>Timaru - Oamaru</item>
        <item>Otago</item>
        <item>Southland</item>
    </string-array>

    <string-array name="category">
        <item>Carpentry</item>
        <item>Plumbing</item>
        <item>Electricity</item>
        <item>Electronics</item>
        <item>Bodywork</item>
        <item>Building</item>
        <item>Mechanics</item>
        <item>Technology</item>
        <item>Health</item>
        <item>Fashion</item>
        <item>Art</item>
        <item>Others</item>

    </string-array>


</resources>