<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) $2019 NativeCode All Rights Reserved
  ~ This product is protected by copyright and distributed under licenses restricting copying,distribution, and decompilation.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="CATEGORY"
        android:id="@+id/category"
        >

        <menu>

            <item
                android:id="@+id/carpentry"
                android:title="@string/carpentry"
                android:icon="@drawable/ic_carpenter">

            </item>
            <item
                android:id="@+id/plumbing"
                android:title="@string/plumbing"
                android:icon="@drawable/ic_plumbing">

            </item>
            <item
                android:id="@+id/electricity"
                android:title="@string/electricity"
                android:icon="@drawable/ic_electrical">

            </item>
            <item
                android:id="@+id/electronics"
                android:title="@string/electronics"
                android:icon="@drawable/ic_electronic">

            </item>
            <item
                android:id="@+id/bodywork"
                android:title="@string/bodywork"
                android:icon="@drawable/ic_brasswork">

            </item>
            <item
                android:id="@+id/building"
                android:title="@string/building"
                android:icon="@drawable/ic_building">

            </item>
            <item
                android:id="@+id/mechanics"
                android:title="@string/mechanics"
                android:icon="@drawable/ic_mechanics">

            </item>
            <item
                android:id="@+id/technology"
                android:title="@string/technology"
                android:icon="@drawable/ic_tech"
                >

            </item>
            <item
                android:id="@+id/health"
                android:title="@string/health"
                android:icon="@drawable/ic_healt"
                >

            </item>
            <item
                android:id="@+id/fashion"
                android:title="@string/fashion"
                android:icon="@drawable/ic_fashion"
                >

            </item>

            <item
                android:id="@+id/art"
                android:title="@string/art"
                android:icon="@drawable/ic_art"
                >

            </item>

            <item
                android:id="@+id/other"
                android:title="@string/others"
                android:icon="@drawable/ic_art"
                >

            </item>

        </menu>

    </item>


    <item
        android:title="@string/services"
        android:id="@+id/services">

        <menu>

            <item
                android:id="@+id/myServices"
                android:title="@string/my_services"
                android:icon="@drawable/ic_services"
                />

            <item
                android:id="@+id/newService"
                android:title="New Service"
                android:icon="@drawable/ic_new_service"
                />

        </menu>

    </item>


</menu>