<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".pages.signup.SignUp">


    <include
        android:id="@+id/constDesing"
        layout="@layout/activity_const_design" />

    <TextView
        android:id="@+id/returnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/login_return"
        android:textColor="@color/purple_700"
        android:textSize="20dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/returnLogin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="-50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/main_icon_login"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/circle_decorator_main"
                    android:foreground="@drawable/main_icon"
                    android:orientation="horizontal" />

                <Spinner
                    android:id="@+id/rolUser"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/spinner_theme"
                    android:textColor="@color/black"
                    android:spinnerMode="dialog"
                    android:textColorHint="@color/text_hint" />

                <EditText
                    android:id="@+id/firsName"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edittext_theme"
                    android:hint="@string/fist_name_hint"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/secondName"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edittext_theme"
                    android:hint="@string/second_name_hint"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/emailSignUp"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edittext_theme"
                    android:hint="@string/email_hint"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint"
                    android:textSize="20dp" />


                <TextView
                    android:id="@+id/nextLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/nex_step"
                    android:textColor="@color/purple_700"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>






</RelativeLayout>