<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <include
        android:id="@+id/circle_top"
        layout="@layout/circle_top_widget"/>

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/purple_700"
        android:textSize="20dp" />


    <LinearLayout
        android:id="@+id/main_icon_login"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/circle_top"
        android:layout_centerInParent="true"
        android:layout_marginTop="-50dp"
        android:background="@drawable/circle_decorator_main"
        android:foreground="@drawable/main_icon"
        android:orientation="horizontal" />


    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/main_icon_login"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_theme"
        android:hint="Email:"
        android:textColor="@color/black"
        android:textColorHint="@color/text_hint"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/emailLogin"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_theme"
        android:hint="Password:"
        android:textColor="@color/black"
        android:textColorHint="@color/text_hint"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/passwordRecover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/password_recover"
        android:textColor="@color/purple_700"
        android:textSize="15dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_below="@+id/passwordRecover"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_decorator_button"
        android:text="@string/login_text"
        android:textColor="@color/white"
        android:textSize="25dp" />

<!--    Botton Information-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/dev_nick"
        android:textColor="@android:color/darker_gray"
        android:textSize="12dp" />

    <include
        android:id="@+id/circle_botton"
        layout="@layout/circle_botton_widget" />


</RelativeLayout>