<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) $2019 NovaCode All Rights Reserved
  ~ This product is protected by copyright and distributed under licenses restricting copying,distribution, and decompilation.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".pages.recovery.NewPassword">

    <include
        android:id="@+id/constDesing"
        layout="@layout/activity_const_design" />

    <ImageView
        android:id="@+id/main_icon_new_password"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circle_decorator_main"
        android:foreground="@drawable/main_icon" />


    <EditText
        android:id="@+id/newPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/main_icon_new_password"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_theme"
        android:hint="@string/password_hint"
        android:textColor="@color/black"
        android:textColorHint="@color/text_hint"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/reNewPasswrd"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/newPassword"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_theme"
        android:hint="@string/re_password_hint"
        android:textColor="@color/black"
        android:textColorHint="@color/text_hint"
        android:textSize="20dp" />


    <Button
        android:id="@+id/btnValidateCode"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_below="@+id/reNewPasswrd"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/rectangle_decorator_button"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="25dp" />

</RelativeLayout>