<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) $2019 NovaCode All Rights Reserved
  ~ This product is protected by copyright and distributed under licenses restricting copying,distribution, and decompilation.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/new_service"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"

                />

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/title_register_service"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/titleService"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edittext_theme"
            android:textColor="@color/black"
            android:textColorHint="@color/text_hint"
            android:maxLength="15"
            android:textSize="10sp" />
    </LinearLayout>


            <TextView
                android:id="@+id/specificationsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_layout"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:text="@string/specifications_service"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/specificationsData"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@+id/specificationsTitle"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edittext_theme"
                android:maxLength="450"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/specificationsCharacters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="0/1050"
                android:textSize="10sp"
                android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/priceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/specificationsCharacters"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/price"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/priceNewService"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edittext_theme"
            android:textColor="@color/black"
            android:textColorHint="@color/text_hint"
            android:textSize="10sp" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/specificationsCharacters"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">


            <ProgressBar
                android:id="@+id/creatingService"
                style="?android:attr/progressBarStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center" />

            <Button
            android:id="@+id/createService"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:background="@drawable/rectangle_decorator_button"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="25sp" />

        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>