<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) $2019 NovaCode All Rights Reserved
  ~ This product is protected by copyright and distributed under licenses restricting copying,distribution, and decompilation.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".pages.signup.SignUpClient">




    <include
        android:id="@+id/constDesing"
        layout="@layout/activity_const_design" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/circle_decorator_main"
                    android:foreground="@drawable/main_icon"
                    android:orientation="horizontal" />

                <Spinner
                    android:id="@+id/selectCityClient"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/spinner_theme"
                    android:textColor="@color/black"
                    android:spinnerMode="dialog"
                    android:textColorHint="@color/text_hint" />

                <EditText
                    android:id="@+id/phoneClient"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edittext_theme"
                    android:hint="@string/phone_number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/passwordClient"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edittext_theme"
                    android:hint="@string/password_hint"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:textColorHint="@color/text_hint"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/rePasswordClient"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edittext_theme"
                    android:hint="@string/re_password_hint"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:textColorHint="@color/text_hint"
                    android:textSize="20dp" />


                <Button
                    android:id="@+id/createAccountClient"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_below="@+id/passwordRecover"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rectangle_decorator_button"
                    android:text="@string/create_account"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>






</RelativeLayout>